--- a/index.html
+++ b/index.html
@@ -45,24 +45,16 @@
 
 
   <h2>Biography</h2>
-  <p> I am a CS master student at Peking University (PKU), advised by Prof. Jian Zhang and Prof. Siwei Ma. I got a B.E. degree at Central South University.
+  <p> I am a master student at Shenzhen International Graduate School & Department of Electronic Engineering, Tsinghua University, China and work with Prof. Wenming Yang in the VIP Lab. Before that I received my B.E degree from School of Computer Science and Engineering, Northeastern University, China, in Jul. 2020.
   </p>
-  <p>My research interests include computer vision and machine learning, specifically for person re-identification.</p>
+  <p> My research interest includes deep learning and its applications to computer vision tasks. Specifically, these applications lie in image restoration.</p>
 
 
 
 <h2>News</h2>
 <ul>
   <li>
-    Dec. 2020: One paper [MoS] was accepted by AAAI 2021!
-  </li>
-  
-  <li>
-    Jul. 2020: One paper [MEB-Net] was accepted by ECCV 2020!
-  </li>
-
-  <li>
-    Apr. 2020: One paper [SIM] was accepted by IJCAI 2020!
+    Jul. 2020: One paper [A-CubeNet] was accepted by ACM MM 2020!
   </li>
 
 
